--- a/FFP.html
+++ b/FFP.html
@@ -22,7 +22,7 @@
     <div class="wp-block-group content-group">
       <h2 class="wp-block-heading has-text-align-center">Fun Facts</h2>
       <p class="has-text-align-center">
-        Welcome to a world of surprising and fascinating trivia! From immortal jellyfish to cube-shaped wombat poop, these 10 fun facts will make you see the world in a whole new way. Whether it's nature, space, or science, each fact is a little nugget of knowledge to impress your friends and spark curiosity. Get ready to have your mind blown! 🚀🔍
+        Welcome to a world of surprising and fascinating trivia! From immortal jellyfish to cube-shaped wombat poop, these 10 fun facts will make you see the world in a whole new way. Whether it's nature, space, or science, each fact is a little nugget of knowledge to impress your friends and spark curiosity. Get ready to have your mind blown!
       </p>
     </div>
     <figure class="wp-block-image size-full">
